# BRAiN

./: .env.example  .gitignore  AGENTS.md  BRAIN_ARCH_IMPLEMENTATION_REPORT.md  BRAIN_RISIKO_ANALYSE.md  BRAIN_SOLL_KONZEPT.md  BRAIN_SYSTEM_ANALYSIS.md  BRAIN_URL_SOLL_KONZEPT.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CLUSTER_ARCHITECTURE.md  COOLIFY_DEPLOYMENT_PLAN.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_CHECKLIST_DEV.md  DEPLOYMENT_GUIDE.md  DEPLOY_FIX_README.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  Dockerfile.controldeck-v2  EXECUTIVE_SUMMARY.md  FINAL_SECURITY_REPORT.md  G2_IMPLEMENTATION_REPORT.md  G4_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_COURSE_PAYCORE.md  IMPLEMENTATION_TODO.md  INFRASTRUCTURE_SETUP.md  MASTER_ROADMAP.json  MASTER_ROADMAP.md  MASTER_ROADMAP_DETAILS.md  MERGE_COMPLETE_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_README.md  MYZEL_CHARTA.md  OPERATIONAL_HARDENING_SPRINT_REPORT.md  OPS_ASSURANCE_COMPLETION_REPORT.md  (+103 more)
.githooks/: pre-push
.github/: AUTOMATION-CHECKLIST.md  CODEOWNERS  WORKFLOWS.md  copilot-instructions.md
.opencode/: README.md
backend/: .env  .env.example  CHARTER_COMPLIANCE_SUMMARY.md  CHARTER_IMPACT_REPORT.md  DEPLOY_V3.sh  Dockerfile  Dockerfile.minimal.v2  Dockerfile.minimal.v3  Dockerfile.worker  FORCE_REBUILD.txt  MANIFEST.in  __init__.py  app_entry.py  audit_report_group_c.md  beat-entrypoint.sh  deploy.sh  docker-compose.yml  main.py  main_minimal_v2.py  main_minimal_v3.py  pytest.ini  requirements-minimal.txt  requirements.txt  start_prod.py  test_chat_endpoint.py  test_cluster_system.py  test_service_logic.py  worker-entrypoint.sh  worker.py
better-auth-node/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.simple  README.md  api-request.http  deploy-api.sh  deploy.sh  docker-compose-prod.yml  docker-compose.yml  package.json
configs/: agent_profiles.json  model_routing_policy.json
dmz/: README.md
docs/: ALERTING_POLICY.md  API_KEY_MANAGEMENT.md  ARCHITECTURE.md  AUDIT_LOGGING.md  AUTH_GOVERNANCE_CONCEPT.md  AUTH_MASTER_KNOWLEDGE_BASE.md  AUTOSCALING_VERIFICATION.md  AXE_WEBSOCKET_IMPLEMENTATION_REPORT.md  BACKEND-AUTH-TASKS-2.1-2.5-REPORT.md  BACKGROUND_JOBS.md  BRAIN_Control_Deck_UI_Layout.md  BRAIN_SERVER_DATASHEET_FOR_CHATGPT.md  CHAT_ENDPOINT_IMPLEMENTATION.md  CLEANUP_STATUS.md  CLI_TOOLS.md  CLUSTER_SYSTEM_STATUS.md  CODE_REVIEW_CHECKLIST.md  CONSTITUTIONAL_AGENTS.md  COURSE_CERTIFICATE_FORMAT.md  DATABASE_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_TOOLS.md  GOVERNANCE_EVIDENCE_PACK.md  GOVERNANCE_RUNBOOKS.md  GOVERNANCE_V1_SPEC.md  INCIDENT_TABLETOP_001.md  LLM_ENHANCEMENT_GUARDRAILS.md  LOAD_BALANCING_SETUP.md  LOCAL_DEVELOPMENT_GUIDE.md  Makefile.txt  ODOO_ENV_SETUP.md  (+52 more)
(+3281 files in other folders)
